--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.5.0",
+    "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.17.3",
     "express-favicon": "^2.0.1",
+    "flowbite": "^1.4.3",
     "path": "^0.12.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -22,6 +24,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "startT": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
